# py-image-ascii

./: .gitignore  pyproject.toml
examples/: link-standard.txt  link.txt  thumbs.txt
py_image_ascii/: cli.py  image.py  transform.py
py_image_ascii.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_img_2_ascii.py
